# mock-exam-simulator

./: .gitignore  README.md  config.yaml  mock_exam_multiple_support.py  mock_exam_win.py  pyproject.toml  remove_unused_pylibs.sh  requirements.txt  run_app.bat  run_app.sh
csv/: sample_multiple.csv  sample_single.csv
mock_exam_multiple_support/: config.yaml  mock_exam_multiple_support.py
mock_exam_simulator/: __init__.py  __main__.py  app.py  main.py
mock_exam_simulator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mock_exam_simulator/config/: __init__.py  config_loader.py
mock_exam_simulator/core/: __init__.py  exam_state.py  question_bank.py  translator.py
mock_exam_simulator/models/: __init__.py  question.py
mock_exam_simulator/ui/: __init__.py  styles.py  ui_manager.py
mock_exam_single_support/: mock_exam_single_support.py
test-utils/: answer_validation.py  notes.md  parse_dumpspanda_pdf.py
